Закончить логику для Items